--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/style/regular";
+
 @mixin navigation-bar {
 	.navigation-bar {
 		z-index: 1;
@@ -33,11 +35,9 @@
 				padding: 40px 105px;
 				box-sizing: border-box;
 				justify-content: space-between;
-				img {
+				.brand-logo {
 					width: 175px;
-				}
-				.logo-small {
-					display: none;
+					opacity: 0;
 				}
 				.right {
 					display: flex;
@@ -52,7 +52,33 @@
 							margin: 0 40px;
 						}
 					}
-					button {
+					.icon-button {
+						padding: 0;
+						width: 32px;
+						height: 32px;
+						border: none;
+						outline: none;
+						cursor: pointer;
+						background-color: transparent;
+						&:last-child {
+							margin-left: 16px;
+						}
+						.hamburger-menu {
+							position: relative;
+							span {
+								width: 24px;
+								height: 2px;
+								display: block;
+								margin-left: auto;
+								margin-right: auto;
+								background-color: #313896;
+								&:nth-child(2) {
+									margin: 6px auto;
+								}
+							}
+						}
+					}
+					.contact-button {
 						width: 140px;
 						height: 40px;
 						color: #313896;
@@ -69,7 +95,7 @@
 				}
 			}
 		}
-		@media only screen and (max-width: 425px) {
+		@media only screen and (max-width: $mobile) {
 			.navigation-bar-main {
 				height: 80px;
 				.logo-container {
@@ -80,13 +106,9 @@
 				}
 				.navigation-bar-item {
 					padding: 22px 16px;
-					.logo-big {
-						display: none;
-					}
-					.logo-small {
+					.brand-logo {
 						width: 35px;
 						height: 35px;
-						display: block;
 					}
 				}
 			}
@@ -101,6 +123,7 @@
 		justify-content: center;
 		.header-content-main {
 			width: 100%;
+			height: 732px;
 			max-width: 1440px;
 			position: relative;
 			.header-content-text {
@@ -168,12 +191,15 @@
 				position: absolute;
 			}
 		}
-		@media only screen and (max-width: 425px) {
+		@media only screen and (max-width: $mobile) {
 			.header-content-main {
+				height: 456px;
 				.header-content-text {
+					width: 100%;
 					padding: 0 16px;
-					margin: 80px 0 0 0;
+					max-width: 375px;
 					box-sizing: border-box;
+					margin: 80px auto 0 auto;
 					p {
 						text-align: center;
 						&:nth-child(1) {
@@ -204,8 +230,13 @@
 		display: flex;
 		flex-direction: column;
 		background-repeat: no-repeat;
-		background-position: right center;
+		background-position: top center;
 		background-image: url("../../../assets/image/homeHeader4.svg");
+		@media only screen and (max-width: $mobile) {
+			.header-container {
+				background-position: left center;
+			}
+		}
 		@include navigation-bar;
 		@include header-content;
 	}
