--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/style/regular";
+
 @mixin who-are-we {
 	.who-are-we {
 		margin: auto;
@@ -27,42 +29,81 @@
 		.right {
 			$size: 48px;
 			$margin: 30px;
-			width: 470px;
+			width: 100%;
+			max-width: 470px;
 			box-sizing: border-box;
 			padding-left: $size + $margin;
-			.point-1, .point-2 {
+			.each-point {
 				p {
 					margin: 0;
 					color: #303037;
 					position: relative;
-				}
-				p:first-child {
-					font-size: 24px;
-					line-height: 160%;
-					font-weight: bold;
-					font-family: "Rubik", sans-serif;
-					&:before {
-						top: 50%;
-						content: "";
-						width: $size;
-						height: $size;
-						position: absolute;
-						border-radius: 50%;
-						left: -$size - $margin;
-						background-color: #E0E0E0;
-						transform: translateY(-50%);
+					&:first-child {
+						font-size: 24px;
+						line-height: 160%;
+						font-weight: bold;
+						font-family: "Rubik", sans-serif;
+						&:before {
+							top: 50%;
+							content: "";
+							width: $size;
+							height: $size;
+							position: absolute;
+							border-radius: 50%;
+							left: -$size - $margin;
+							background-color: #E0E0E0;
+							transform: translateY(-50%);
 
+						}
+					}
+					&:last-child {
+						font-size: 18px;
+						margin-top: 16px;
+						line-height: 160%;
+						font-family: "SF Compact Text Regular", sans-serif;
 					}
 				}
-				p:last-child {
-					font-size: 18px;
-					margin-top: 16px;
-					line-height: 160%;
-					font-family: "SF Compact Text Regular", sans-serif;
+				&:first-child {
+					margin-bottom: 40px;
 				}
 			}
-			.point-1 {
-				margin-bottom: 40px;
+		}
+	}
+	@media only screen and (max-width: $mobile) {
+		.who-are-we {
+			padding: 0 16px;
+			flex-direction: column;
+			.left p {
+				text-align: center;
+				&:nth-child(1) {
+					font-size: 18px;
+				}
+				&:not(:first-child) {
+					font-size: 28px;
+				}
+			}
+			.right {
+				$size: 40px;
+				$margin: 24px;
+				margin-top: 70px;
+				.each-point {
+					p {
+						&:first-child {
+							font-size: 18px;
+							&::before {
+								width: $size;
+								height: $size;
+								left: -$size - $margin;
+							}
+						}
+						&:last-child {
+							margin-top: 24px;
+						}
+					}
+					&:last-child {
+						margin-bottom: 38px;
+					}
+				}
 			}
 		}
 	}
@@ -74,5 +115,10 @@
 		padding-top: 90px;
 		box-sizing: border-box;
 		@include who-are-we;
+	}
+	@media only screen and (max-width: $mobile) {
+		.about-us-container {
+			padding-top: 40px;
+		}
 	}
 }
