--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -86,6 +86,7 @@
 				$size: 40px;
 				$margin: 24px;
 				margin-top: 70px;
+				padding-left: $size + $margin;
 				.each-point {
 					p {
 						&:first-child {
