--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -53,7 +53,6 @@
 							left: -$size - $margin;
 							background-color: #E0E0E0;
 							transform: translateY(-50%);
-
 						}
 					}
 					&:last-child {
@@ -110,12 +109,75 @@
 	}
 }
 
+@mixin how-it-works {
+	.how-it-works {
+		margin: auto;
+		max-width: 1440px;
+		p {
+			margin: 0;
+			&:nth-child(1) {
+				color: #A7A9C0;
+				font-size: 24px;
+				font-weight: 500;
+				text-align: center;
+				font-family: "Rubik", sans-serif;
+			}
+			&:nth-child(2) {
+				color: #303037;
+				font-size: 48px;
+				font-weight: bold;
+				text-align: center;
+				margin: 16px auto 32px auto;
+				font-family: "Rubik", sans-serif;
+			}
+			&:nth-child(3) {
+				margin: auto;
+				color: #303037;
+				font-size: 20px;
+				max-width: 600px;
+				line-height: 160%;
+				text-align: center;
+				font-family: "SF Compact Text Regular", sans-serif;
+			}
+		}
+		.pipeline-works {
+			display: flex;
+			margin-top: 80px;
+			flex-direction: row;
+			justify-content: center;
+			.each-item {
+				$size: 64px;
+				width: 100%;
+				max-width: 390px;
+				position: relative;
+				padding-top: $size;
+				&:nth-child(2) {
+					margin: 0 30px;
+				}
+				&::before {
+					top: 0;
+					left: 0;
+					right: 0;
+					content: "";
+					margin: auto;
+					width: $size;
+					height: $size;
+					position: absolute;
+					border-radius: 50%;
+					background-color: #E0E0E0;
+				}
+			}
+		}
+	}
+}
+
 @mixin about-us-container {
 	.about-us-container {
 		width: 100%;
 		padding-top: 90px;
 		box-sizing: border-box;
 		@include who-are-we;
+		@include how-it-works;
 	}
 	@media only screen and (max-width: $mobile) {
 		.about-us-container {
