--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -109,6 +109,80 @@
 	}
 }
 
+@mixin what-we-do {
+	.what-we-do {
+		.header {
+			p {
+				margin: 0;
+			}
+			.title {
+				color: #00D7FE;
+				font-size: 24px;
+				font-weight: 500;
+				text-align: center;
+				font-family: "Rubik", sans-serif;
+			}
+			.subtitle {
+				margin-top: 16px;
+				p {
+					color: #FFFFFF;
+					font-size: 48px;
+					font-weight: bold;
+					line-height: 125%;
+					text-align: center;
+					font-family: "Rubik", sans-serif;
+				}
+			}
+		}
+		.content {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			.content-card {
+				width: 100%;
+				height: 100%;
+				max-width: 600px;
+				max-height: 275px;
+				align-self: center;
+				border-radius: 8px;
+				box-sizing: border-box;
+				background-color: #ffffff;
+				padding: 40px 105px 47px 105px;
+				box-shadow: 0 40px 80px rgba(27, 30, 78, 0.08);
+				&:first-child {
+					margin-right: 15px;
+				}
+				&:last-child {
+					margin-left: 15px;
+				}
+				p {
+					margin: 0;
+				}
+				.header {
+					width: 100%;
+					color: #303037;
+					font-size: 36px;
+					max-width: 370px;
+					font-weight: bold;
+					line-height: 125%;
+					text-align: center;
+					font-family: "Rubik", sans-serif;
+				}
+				.content {
+					width: 100%;
+					color: #303037;
+					font-size: 18px;
+					max-width: 380px;
+					margin-top: 40px;
+					line-height: 160%;
+					text-align: center;
+					font-family: "SF Compact Text Regular", sans-serif;
+				}
+			}
+		}
+	}
+}
+
 @mixin how-it-works {
 	.how-it-works {
 		margin: auto;
@@ -152,7 +226,16 @@
 				position: relative;
 				padding-top: $size;
 				&:nth-child(2) {
-					margin: 0 30px;
+					.numeric-container hr {
+						width: 100%;
+					}
+					.item-content {
+						padding-left: 30px;
+						padding-right: 30px;
+					}
+				}
+				&:nth-child(1) .numeric-container hr {
+					right: 0;
 				}
 				&::before {
 					top: 0;
@@ -166,21 +249,37 @@
 					border-radius: 50%;
 					background-color: #E0E0E0;
 				}
-				.numeric {
-					width: 48px;
-					height: 48px;
-					display: flex;
-					margin: 32px auto;
-					border-radius: 50%;
-					align-items: center;
-					box-sizing: border-box;
-					justify-content: center;
-					border: 2px solid #EEEFF7;
-					p {
-						margin: 0;
-						color: #313896;
-						font-size: 20px;
-						font-family: "Rubik", sans-serif;
+				.numeric-container {
+					overflow: auto;
+					position: relative;
+					hr {
+						top: 0;
+						bottom: 0;
+						height: 2px;
+						margin: auto;
+						border: none;
+						position: absolute;
+						width: calc(50% - 36px);
+						background-color: #EEEFF7;
+					}
+					.numeric {
+						width: 48px;
+						height: 48px;
+						display: flex;
+						margin: 32px auto;
+						border-radius: 50%;
+						position: relative;
+						align-items: center;
+						box-sizing: border-box;
+						justify-content: center;
+						border: 2px solid #EEEFF7;
+						background-color: #ffffff;
+						p {
+							margin: 0;
+							color: #313896;
+							font-size: 20px;
+							font-family: "Rubik", sans-serif;
+						}
 					}
 				}
 				.item-header {
@@ -209,6 +308,7 @@
 		padding-top: 90px;
 		box-sizing: border-box;
 		@include who-are-we;
+		@include what-we-do;
 		@include how-it-works;
 	}
 	@media only screen and (max-width: $mobile) {
