Updated about us component

--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/style/regular";
+@import "./AlternativeData/index";
 
 @mixin who-are-we {
 	.who-are-we {
@@ -111,7 +112,16 @@
 
 @mixin what-we-do {
 	.what-we-do {
+		position: relative;
+		padding: 140px 0 500px 0;
+		img {
+			top: 0;
+			left: 50%;
+			position: absolute;
+			transform: translateX(-45.5%);
+		}
 		.header {
+			position: relative;
 			p {
 				margin: 0;
 			}
@@ -124,6 +134,7 @@
 			}
 			.subtitle {
 				margin-top: 16px;
+				margin-bottom: 80px;
 				p {
 					color: #FFFFFF;
 					font-size: 48px;
@@ -136,6 +147,7 @@
 		}
 		.content {
 			display: flex;
+			position: relative;
 			flex-direction: row;
 			justify-content: center;
 			.content-card {
@@ -185,8 +197,8 @@
 
 @mixin how-it-works {
 	.how-it-works {
-		margin: auto;
 		max-width: 1440px;
+		margin: 0 auto 236px auto;
 		.declaration {
 			margin: 0;
 			&:nth-child(1) {
@@ -309,6 +321,7 @@
 		box-sizing: border-box;
 		@include who-are-we;
 		@include what-we-do;
+		@include alternative-data;
 		@include how-it-works;
 	}
 	@media only screen and (max-width: $mobile) {
