--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -69,6 +69,9 @@
 			}
 		}
 	}
+	@media only screen and (max-width: $tablet) {
+		
+	}
 	@media only screen and (max-width: $mobile) {
 		.who-are-we {
 			padding: 0 16px;
