--- a/src/views/Home/AboutUs/AlternativeData/index.scss
+++ b/src/views/Home/AboutUs/AlternativeData/index.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/style/regular";
+
 @mixin alternative-data {
 	.alternative-data {
 		max-width: 1440px;
@@ -62,6 +64,9 @@
 						text-align: center;
 						transition-duration: 0.3s;
 						font-family: "Rubik", sans-serif;
+						&:last-child {
+							color: #A7A9C0;
+						}
 					}
 					.active {
 						color: #313896;
@@ -88,8 +93,6 @@
 						&:not(:last-child) {
 							border-right: 1px solid #EEEEEE;
 						}
-						//&:nth-child(odd):last-child {
-						//}
 					}
 				}
 				.captured-data {
@@ -126,6 +129,148 @@
 						}
 					}
 				}
+			}
+			.accordion-nav {
+				margin: 0;
+				padding: 0 16px;
+				box-sizing: border-box;
+				li {
+					list-style: none;
+					.accordion-head {
+						height: 72px;
+						display: flex;
+						cursor: pointer;
+						position: relative;
+						align-items: center;
+						hr {
+							margin: 0;
+							width: 100%;
+							height: 2px;
+							bottom: -1px;
+							border: none;
+							position: absolute;
+							border-radius: 1px;
+							transition-duration: 0.3s;
+							background-color: #EEEEEE;
+						}
+						.label {
+							margin: 0;
+							width: 100%;
+							color: #303037;
+							display: block;
+							font-size: 18px;
+							font-weight: bold;
+							text-align: center;
+							transition-duration: 0.3s;
+							font-family: "Rubik", sans-serif;
+						}
+						svg {
+							top: 50%;
+							right: 0;
+							color: #BDBDBD;
+							font-size: 20px;
+							position: absolute;
+							transition-duration: 0.3s;
+							transform: translateY(-50%);
+						}
+					}
+					.head-active {
+						color: #313896;
+						.label {
+							color: #313896;
+						}
+						hr {
+							height: 4px;
+							bottom: -2px;
+							border-radius: 2px;
+							background-color: #313896;
+						}
+						svg {
+							transform: rotateZ(180deg) translateY(50%);
+						}
+					}
+					.accordion-body {
+						max-width: 344px;
+						border-radius: 8px;
+						margin: 32px auto 0 auto;
+						box-shadow: 0 20px 80px rgba(27, 30, 78, 0.08);
+						.services {
+							display: flex;
+							flex-wrap: wrap;
+							position: relative;
+							hr {
+								margin: 0;
+								border: none;
+								position: absolute;
+							}
+							.vertical {
+								left: 0;
+								right: 0;
+								width: 1px;
+								height: 100%;
+								margin: auto;
+								background-color: #EEEEEE;
+							}
+							.horizontal {
+								top: 0;
+								bottom: 0;
+								height: 1px;
+								width: 100%;
+								margin: auto;
+								background-color: #EEEEEE;
+							}
+							.each-service{
+								width: 50%;
+								height: 94px;
+								display: flex;
+								align-items: center;
+								justify-content: center;
+								img {
+									height: 24px;
+								}
+								&:last-child:nth-child(odd) {
+									width: 100%;
+								}
+							}
+							.full-width {
+								width: 100%;
+							}
+						}
+						.captured-data {}
+					}
+					&:last-child {
+						.accordion-head {
+							.label {
+								color: #A7A9C0;
+							}
+							svg, hr {
+								display: none;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	@media only screen and (max-width: $mobile) {
+		.alternative-data {
+			.declaration {
+				&:nth-child(1) {
+					font-size: 18px;
+				}
+				&:nth-child(2) {
+					font-size: 28px;
+					max-width: 340px;
+					margin-left: auto;
+					margin-right: auto;
+					margin-bottom: 32px;
+				}
+				&:nth-child(3) {
+					max-width: 290px;
+				}
+			}
+			.services-container {
+				margin-top: 70px;
 			}
 		}
 	}
