--- a/src/views/Home/AboutUs/AlternativeData/index.scss
+++ b/src/views/Home/AboutUs/AlternativeData/index.scss
@@ -75,9 +75,13 @@
 			}
 			.tab-content {
 				margin: auto;
-				max-width: 1440px;
+				max-width: 990px;
 				.services {
-					max-width: 1024px;
+					width: 100%;
+					border-radius: 8px;
+					position: relative;
+					margin: 90px auto 0 auto;
+					box-shadow: 0 40px 80px rgba(27, 30, 78, 0.08);
 					.images {
 						display: flex;
 						flex-wrap: wrap;
@@ -90,10 +94,59 @@
 								height: 48px;
 							}
 						}
+						div[image-width="1/4"] {
+							width: 25%;
+						}
+						div[image-width="1/3"] {
+							width: 33.333%;
+						}
+						div[image-width="1/2"] {
+							width: 50%;
+						}
+						div[image-width="1/1"] {
+							width: 100%;
+						}
 					}
 				}
 				.captured-data {
+					max-width: 900px;
+					padding-top: 70px;
+					border-radius: 8px;
+					padding-bottom: 40px;
+					margin: -32px auto 0 auto;
+					width: calc(100% - 100px);
+					background-color: #FBFBFC;
+					box-shadow: 0 40px 80px rgba(27, 30, 78, 0.08);
+					p {
+						margin: 0;
+					}
+					.header {
+						color: #303037;
+						font-size: 18px;
+						font-weight: bold;
+						text-align: center;
+						font-family: "Rubik", sans-serif;
+					}
+					.content {
+						margin: auto;
+						color: #303037;
+						font-size: 18px;
+						max-width: 445px;
+						line-height: 160%;
+						text-align: center;
+						font-family: "SF Compact Text Regular", sans-serif;
+					}
+					hr {
+						height: 2px;
+						border: none;
+						max-width: 400px;
+						margin: 32px auto;
+						background-color: #EEEFF7;
+					}
 				}
+			}
+			.content-sm {
+				max-width: 630px;
 			}
 			.accordion-nav {
 				margin: 0;
@@ -207,10 +260,10 @@
 						}
 						.captured-data {
 							width: 90%;
-							height: 250px;
 							max-width: 312px;
 							padding-top: 48px;
 							border-radius: 8px;
+							padding-bottom: 24px;
 							box-sizing: border-box;
 							margin: -48px auto 0 auto;
 							background-color: #FBFBFC;
