--- a/src/views/Home/Footer/index.scss
+++ b/src/views/Home/Footer/index.scss
@@ -1,3 +1,5 @@
+@import "../../../assets/style/regular";
+
 @mixin footer-container {
 	.footer-container {
 		background-color: #313895;
@@ -51,6 +53,15 @@
 					margin-top: 64px;
 					color: rgba(255, 255, 255, 0.5);
 				}
+			}
+		}
+	}
+	@media only screen and (max-width: $mobile) {
+		.footer-container .footer-content {
+			padding: 64px 0 80px 0;
+			flex-direction: column;
+			.left, .center {
+				margin-right: 0;
 			}
 		}
 	}
