Updated about us component to responsive view

--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -308,20 +308,91 @@
 						}
 					}
 				}
-				.item-header {
-					font-size: 24px;
-					font-weight: bold;
-					text-align: center;
-					margin-bottom: 16px;
-					font-family: "Rubik", sans-serif;
+				.text-container {
+					margin-top: 32px;
+					.item-header {
+						margin-top: 0;
+						font-size: 24px;
+						font-weight: bold;
+						text-align: center;
+						margin-bottom: 16px;
+						font-family: "Rubik", sans-serif;
+					}
+					.item-content {
+						margin: 0;
+						color: #303037;
+						font-size: 18px;
+						line-height: 160%;
+						text-align: center;
+						font-family: "SF Compact Text Regular", sans-serif;
+					}
 				}
-				.item-content {
-					margin: 0;
-					color: #303037;
+			}
+		}
+		@media only screen and (max-width: $tablet){
+			.pipeline-works {
+				padding: 0 16px;
+				flex-direction: column;
+				box-sizing: border-box;
+				.each-item {
+					padding: 0;
+					display: flex;
+					max-width: none;
+					margin-bottom: 16px;
+					&::before {
+						display: none;
+					}
+					&:last-child .numeric-container::before {
+						display: none;
+					}
+					.numeric-container {
+						overflow: visible;
+						position: relative;
+						&::before {
+							left: 0;
+							right: 0;
+							top: 64px;
+							width: 2px;
+							content: "";
+							margin: auto;
+							position: absolute;
+							height: calc(100% - 64px);
+							background-color: #EEEFF7;
+						}
+						hr {
+							display: none;
+						}
+						.numeric {
+							margin: 0;
+						}
+					}
+					.text-container {
+						margin-top: 0;
+						padding: 14px 0 20px 42px;
+						p {
+							padding: 0 !important;
+							text-align: left !important;
+						}
+						.item-header {
+							font-size: 18px;
+							margin-bottom: 24px;
+						}
+						.item-content {
+							font-size: 16px;
+						}
+					}
+				}
+			}
+			.declaration {
+				&:nth-child(1) {
 					font-size: 18px;
-					line-height: 160%;
-					text-align: center;
-					font-family: "SF Compact Text Regular", sans-serif;
+				}
+				&:nth-child(2) {
+					font-size: 28px;
+					max-width: 270px;
+				}
+				&:nth-child(3) {
+					max-width: 260px;
 				}
 			}
 		}
