--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -250,6 +250,7 @@
 		.what-we-do {
 			padding-top: 110px;
 			img {
+				width: auto;
 				transform: translateX(-51.5%);
 			}
 			.header {
@@ -396,6 +397,9 @@
 		@media only screen and (max-width: $tablet){
 			.pipeline-works {
 				padding: 0 16px;
+				max-width: 554px;
+				margin-left: auto;
+				margin-right: auto;
 				flex-direction: column;
 				box-sizing: border-box;
 				.each-item {
@@ -448,6 +452,17 @@
 				}
 			}
 			.declaration {
+				&:nth-child(2) {
+					max-width: 558px;
+					margin-bottom: 48px;
+				}
+				&:nth-child(3) {
+					max-width: 490px;
+				}
+			}
+		}
+		@media only screen and (max-width: $mobile) {
+			.declaration {
 				&:nth-child(1) {
 					font-size: 18px;
 				}
@@ -459,8 +474,6 @@
 					max-width: 260px;
 				}
 			}
-		}
-		@media only screen and (max-width: $mobile) {
 		}
 	}
 }
