--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -30,6 +30,7 @@
 				background-image: url("../../../assets/image/homeHeader2.svg");
 			}
 			.navigation-bar-item {
+				height: 100%;
 				display: flex;
 				position: relative;
 				padding: 40px 105px;
@@ -331,7 +332,7 @@
 	}
 	@media only screen and (max-width: $tablet) {
 		.header-container {
-			background-position: top -40px left;
+			background-position: top left;
 		}
 	}
 	@media only screen and (max-width: $mobile) {
