--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -303,6 +303,10 @@
 					}
 					.button-container {
 						align-self: center;
+						img {
+							left: unset;
+							right: -174px;
+						}
 					}
 				}
 				.header-illustration {
