--- a/src/views/Home/AboutUs/AlternativeData/index.scss
+++ b/src/views/Home/AboutUs/AlternativeData/index.scss
@@ -210,8 +210,7 @@
 					}
 					.accordion-body {
 						display: none;
-						max-width: 344px;
-						margin: 32px auto 0 auto;
+						margin: 32px auto 20px auto;
 						.services {
 							position: relative;
 							border-radius: 8px;
