--- a/src/views/Home/AboutUs/AlternativeData/index.scss
+++ b/src/views/Home/AboutUs/AlternativeData/index.scss
@@ -85,6 +85,21 @@
 					.images {
 						display: flex;
 						flex-wrap: wrap;
+						position: relative;
+						.separator {
+							width: 100%;
+							height: 100%;
+							display: flex;
+							position: absolute;
+							justify-content: space-evenly;
+							hr {
+								margin: 0;
+								width: 1px;
+								height: 100%;
+								border: none;
+								background-color: #EEEEEE;
+							}
+						}
 						div {
 							height: 176px;
 							display: flex;
