--- a/src/views/Home/ContactForm/index.scss
+++ b/src/views/Home/ContactForm/index.scss
@@ -25,6 +25,7 @@
 			}
 		}
 		.contact-form {
+			width: 90%;
 			margin: auto;
 			max-width: 810px;
 			border-radius: 8px;
@@ -85,6 +86,45 @@
 					margin: 48px auto 0 auto;
 					background-color: #F88634;
 					font-family: "SF Compact Text Regular", sans-serif;
+				}
+			}
+		}
+	}
+	@media only screen and (max-width: $tablet) {
+		.contact-form-container .header p {
+			&:last-child {
+				margin: auto;
+				max-width: 450px;
+			}
+		}
+	}
+	@media only screen and (max-width: $mobile) {
+		.contact-form-container {
+			margin-bottom: 100px;
+			.header {
+				margin-bottom: 60px;
+				p {
+					&:first-child {
+						font-size: 18px;
+					}
+					&:last-child {
+						font-size: 28px;
+						max-width: 250px;
+					}
+				}
+			}
+			.contact-form {
+				padding: 16px 32px 24px 32px;
+				.contact-form-top {
+					flex-direction: column;
+					input {
+						width: 100%;
+						margin-left: 0 !important;
+						margin-right: 0 !important;
+						&:last-child {
+							margin-top: 4px;
+						}
+					}
 				}
 			}
 		}
