--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&display=swap');
 @import "../assets/style/fonts";
 
-html, body, #root {
-  margin: 0;
-  width: 100%;
+html {
 	height: 100%;
-	overflow-x: hidden;
+	overflow: auto;
+	body {
+		margin: 0;
+		width: 100%;
+		height: 100%;
+		#root {
+			overflow-x: hidden;
+		}
+	}
 }
