--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -63,8 +63,8 @@
 						font-family: "SF Compact Text Regular", sans-serif;
 					}
 				}
-				&:first-child {
-					margin-bottom: 40px;
+				&:not(:last-child) {
+					margin-bottom: 45px;
 				}
 			}
 		}
@@ -125,9 +125,9 @@
 
 @mixin what-we-do {
 	.what-we-do {
-		margin-top: 140px;
+		margin-top: 100px;
 		position: relative;
-		padding: 140px 0 500px 0;
+		padding: 140px 0 350px 0;
 		img {
 			top: 0;
 			left: 50%;
@@ -168,9 +168,8 @@
 			justify-content: center;
 			.content-card {
 				width: 100%;
-				height: 100%;
+				height: 325px;
 				max-width: 600px;
-				max-height: 275px;
 				align-self: center;
 				border-radius: 8px;
 				padding: 40px 0 47px 0;
@@ -191,7 +190,7 @@
 					margin: auto;
 					color: #303037;
 					font-size: 36px;
-					max-width: 370px;
+					max-width: 300px;
 					font-weight: bold;
 					line-height: 125%;
 					text-align: center;
@@ -214,8 +213,8 @@
 	}
 	@media only screen and (max-width: $tablet) {
 		.what-we-do {
-			margin-top: 160px;
-			padding-bottom: 400px;
+			margin-top: 130px;
+			padding-bottom: 250px;
 			img {
 				width: 2350px;
 			}
@@ -226,7 +225,9 @@
 			.content {
 				flex-direction: column;
 				.content-card {
-					max-width: 558px;
+					height: unset;
+					max-width: 600px;
+					max-height: 275px;
 					margin-bottom: 24px;
 					margin-left: 0 !important;
 					margin-right: 0 !important;
@@ -237,7 +238,7 @@
 					.header {
 						margin: auto;
 						font-size: 22px;
-						max-width: 230px;
+						max-width: 180px;
 					}
 					.content {
 						font-size: 16px;
@@ -250,8 +251,7 @@
 	}
 	@media only screen and (max-width: $mobile) {
 		.what-we-do {
-			padding-top: 110px;
-			padding-bottom: 400px;
+			padding-top: 80px;
 			img {
 				width: auto;
 				transform: translateX(-51.5%);
@@ -484,7 +484,7 @@
 @mixin about-us-container {
 	.about-us-container {
 		width: 100%;
-		padding-top: 90px;
+		padding-top: 50px;
 		box-sizing: border-box;
 		@include who-are-we;
 		@include what-we-do;
@@ -493,7 +493,7 @@
 	}
 	@media only screen and (max-width: $mobile) {
 		.about-us-container {
-			padding-top: 40px;
+			padding-top: 30px;
 		}
 	}
 }
