--- a/src/views/Home/ContactForm/index.scss
+++ b/src/views/Home/ContactForm/index.scss
@@ -83,9 +83,10 @@
 					display: block;
 					cursor: pointer;
 					font-size: 14px;
+					font-weight: bold;
 					border-radius: 8px;
 					margin: 48px auto 0 auto;
-					background-color: #F88634;
+					background-color: #3FBEAD;
 					font-family: "SF Compact Text Regular", sans-serif;
 					&:disabled {
 						cursor: default;
