--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -6,12 +6,10 @@
 		display: flex;
 		position: relative;
 		justify-content: center;
+		transition-duration: 0.3s;
 		.navigation-bar-extend {
 			flex-grow: 1;
 			display: block;
-		}
-		.logo-container-extend {
-			background-color: #313896;
 		}
 		.navigation-bar-main {
 			width: 100%;
@@ -20,15 +18,6 @@
 			max-width: 1440px;
 			align-self: center;
 			position: relative;
-			.logo-container {
-				top: 0;
-				left: 0;
-				width: 390px;
-				height: 100%;
-				display: block;
-				position: absolute;
-				background-image: url("../../../assets/image/homeHeader2.svg");
-			}
 			.navigation-bar-item {
 				height: 100%;
 				display: flex;
@@ -111,10 +100,6 @@
 		}
 		@media only screen and (max-width: $tablet) {
 			.navigation-bar-main {
-				.logo-container {
-					width: 120px;
-					background-position: center right;
-				}
 				.navigation-bar-item {
 					padding-left: 40px;
 					img {
@@ -126,7 +111,6 @@
 		@media only screen and (max-width: $mobile) {
 			.navigation-bar-main {
 				height: 80px;
-				background-color: #ffffff;
 				.logo-container {
 					width: 80px;
 					height: 80px;
@@ -210,7 +194,7 @@
 				width: 100%;
 				display: flex;
 				max-width: 660px;
-				margin-top: 96px;
+				margin-top: 60px;
 				margin-left: 105px;
 				position: relative;
 				padding-bottom: 40px;
@@ -233,9 +217,9 @@
 						font-family: "Rubik", sans-serif;
 					}
 					&:nth-child(3) {
-						width: 500px;
 						color: #303037;
 						font-size: 20px;
+						max-width: 540px;
 						line-height: 160%;
 						font-family: "SF Compact Text Regular", sans-serif;
 					}
@@ -253,11 +237,11 @@
 						cursor: pointer;
 						font-weight: bold;
 						border-radius: 8px;
-						background-color: #F88634;
+						background-color: #3FBEAD;
 						font-family: "SF Compact Text Regular", sans-serif;
 					}
 					img {
-						top: 7px;
+						bottom: 6px;
 						left: 108px;
 						z-index: -1;
 						position: absolute;
@@ -270,27 +254,43 @@
 				position: absolute;
 			}
 		}
+		@media only screen and (max-width: $desktop-sm) {
+			.header-content-main {
+				.header-illustration {
+					display: none;
+				}
+			}
+		}
 		@media only screen and (max-width: $tablet) {
-			.header-content-main .header-content-text {
-				margin-left: auto;
-				margin-right: auto;
-				p {
-					text-align: center;
-					&:nth-child(2) {
-						font-size: 50px;
+			.header-content-main {
+				.header-content-text {
+					margin-top: 340px;
+					margin-left: auto;
+					margin-right: auto;
+					p {
+						text-align: center;
+						&:nth-child(2) {
+							font-size: 50px;
+						}
+						&:nth-child(3) {
+							margin: auto;
+						}
 					}
-					&:nth-child(3) {
-						margin: auto;
+					.button-container {
+						text-align: center;
+						img {
+							left: 0;
+							right: 0;
+							margin: auto;
+							transform: translateX(-135px);
+						}
 					}
 				}
-				.button-container {
-					text-align: center;
-					img {
-						left: 0;
-						right: 0;
-						margin: auto;
-						transform: translateX(-135px);
-					}
+				.header-illustration {
+					left: 0;
+					right: 0;
+					margin: auto;
+					display: block;
 				}
 			}
 		}
@@ -302,7 +302,7 @@
 					padding: 0 16px;
 					max-width: 375px;
 					box-sizing: border-box;
-					margin: 80px auto 0 auto;
+					margin: 340px auto 0 auto;
 					p {
 						text-align: center;
 						&:nth-child(1) {
@@ -324,7 +324,6 @@
 					}
 				}
 				.header-illustration {
-					display: none;
 				}
 			}
 		}
@@ -350,12 +349,13 @@
 	}
 	@media only screen and (max-width: $tablet) {
 		.header-container {
+			height: 1000px;
 			background-position: top left;
 		}
 	}
 	@media only screen and (max-width: $mobile) {
 		.header-container {
-			height: 724px;
+			height: 900px;
 		}
 	}
 }
