--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -324,6 +324,9 @@
 					}
 				}
 				.header-illustration {
+					left: 50%;
+					right: unset;
+					transform: translateX(-50%);
 				}
 			}
 		}
