--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -1,5 +1,5 @@
 @import "../../../assets/style/regular";
-@import "./AlternativeData/index";
+@import "./AlternativeDataV2/index";
 
 @mixin who-are-we {
 	.who-are-we {
@@ -127,7 +127,7 @@
 	.what-we-do {
 		margin-top: 100px;
 		position: relative;
-		padding: 140px 0 350px 0;
+		padding: 140px 0 400px 0;
 		img {
 			top: 0;
 			left: 50%;
@@ -280,202 +280,85 @@
 @mixin how-it-works {
 	.how-it-works {
 		margin: auto;
-		max-width: 1440px;
-		.declaration {
-			margin: 0;
-			&:nth-child(1) {
-				color: #A7A9C0;
-				font-size: 24px;
-				font-weight: 500;
-				text-align: center;
-				font-family: "Rubik", sans-serif;
-			}
-			&:nth-child(2) {
-				color: #303037;
-				font-size: 48px;
-				font-weight: bold;
-				text-align: center;
-				margin: 16px auto 32px auto;
-				font-family: "Rubik", sans-serif;
-			}
-			&:nth-child(3) {
-				margin: auto;
-				color: #303037;
-				font-size: 20px;
-				max-width: 600px;
-				line-height: 160%;
-				text-align: center;
-				font-family: "SF Compact Text Regular", sans-serif;
-			}
-		}
-		.pipeline-works {
+		display: flex;
+		max-width: 1220px;
+		justify-content: space-between;
+		.left {
 			display: flex;
-			margin-top: 80px;
-			flex-direction: row;
+			max-width: 500px;
+			margin-right: 30px;
+			flex-direction: column;
 			justify-content: center;
-			.each-item {
-				$size: 64px;
-				width: 100%;
-				max-width: 390px;
-				position: relative;
-				padding-top: $size;
-				&:nth-child(2) {
-					.numeric-container hr {
-						width: 100%;
-					}
-					.item-content {
-						padding-left: 30px;
-						padding-right: 30px;
-					}
-				}
-				&:nth-child(1) .numeric-container hr {
-					right: 0;
-				}
-				&::before {
-					top: 0;
-					left: 0;
-					right: 0;
-					content: "";
-					margin: auto;
-					width: $size;
-					height: $size;
-					position: absolute;
-					border-radius: 50%;
-					background-color: #E0E0E0;
-				}
-				.numeric-container {
-					overflow: auto;
-					position: relative;
-					hr {
-						top: 0;
-						bottom: 0;
-						height: 2px;
-						margin: auto;
-						border: none;
-						position: absolute;
-						width: calc(50% - 36px);
-						background-color: #EEEFF7;
-					}
-					.numeric {
-						width: 48px;
-						height: 48px;
-						display: flex;
-						margin: 32px auto;
-						border-radius: 50%;
-						position: relative;
-						align-items: center;
-						box-sizing: border-box;
-						justify-content: center;
-						border: 2px solid #EEEFF7;
-						background-color: #ffffff;
-						p {
-							margin: 0;
-							color: #313896;
-							font-size: 20px;
-							font-family: "Rubik", sans-serif;
-						}
-					}
-				}
-				.text-container {
-					margin-top: 32px;
-					.item-header {
-						margin-top: 0;
-						font-size: 24px;
-						font-weight: bold;
-						text-align: center;
-						margin-bottom: 16px;
-						font-family: "Rubik", sans-serif;
-					}
-					.item-content {
-						margin: 0;
-						color: #303037;
-						font-size: 18px;
-						line-height: 160%;
-						text-align: center;
-						font-family: "SF Compact Text Regular", sans-serif;
-					}
-				}
-			}
-		}
-		@media only screen and (max-width: $tablet){
-			.pipeline-works {
-				padding: 0 16px;
-				max-width: 554px;
-				margin-left: auto;
-				margin-right: auto;
-				flex-direction: column;
-				box-sizing: border-box;
-				.each-item {
-					padding: 0;
-					display: flex;
-					max-width: none;
-					margin-bottom: 16px;
-					&::before {
-						display: none;
-					}
-					&:last-child .numeric-container::before {
-						display: none;
-					}
-					.numeric-container {
-						overflow: visible;
-						position: relative;
-						&::before {
-							left: 0;
-							right: 0;
-							top: 64px;
-							width: 2px;
-							content: "";
-							margin: auto;
-							position: absolute;
-							height: calc(100% - 64px);
-							background-color: #EEEFF7;
-						}
-						hr {
-							display: none;
-						}
-						.numeric {
-							margin: 0;
-						}
-					}
-					.text-container {
-						margin-top: 0;
-						padding: 14px 0 20px 42px;
-						p {
-							padding: 0 !important;
-							text-align: left !important;
-						}
-						.item-header {
-							font-size: 18px;
-							margin-bottom: 24px;
-						}
-						.item-content {
-							font-size: 16px;
-						}
-					}
-				}
-			}
 			.declaration {
-				&:nth-child(2) {
-					max-width: 558px;
-					margin-bottom: 48px;
-				}
-				&:nth-child(3) {
-					max-width: 490px;
-				}
-			}
-		}
-		@media only screen and (max-width: $mobile) {
-			.declaration {
+				margin: 0;
 				&:nth-child(1) {
-					font-size: 18px;
+					color: #A7A9C0;
+					font-size: 24px;
+					font-weight: 500;
+					font-family: "Rubik", sans-serif;
 				}
 				&:nth-child(2) {
-					font-size: 28px;
-					max-width: 270px;
+					color: #303037;
+					font-size: 48px;
+					font-weight: bold;
+					line-height: 125%;
+					margin: 16px 0 24px 0;
+					font-family: "Rubik", sans-serif;
 				}
 				&:nth-child(3) {
-					max-width: 260px;
+					color: #303037;
+					font-size: 20px;
+					line-height: 160%;
+					font-family: "SF Compact Text Regular", sans-serif;
 				}
+			}
+		}
+		.right {
+			flex-grow: 1;
+			img {
+				width: 100%;
+				max-width: 705px;
+			}
+		}
+	}
+	@media only screen and (max-width: $desktop-sm) {
+		.how-it-works {
+			flex-direction: column;
+			.left {
+				margin: auto;
+				max-width: 600px;
+				.declaration {
+					text-align: center;
+				}
+			}
+			.right {
+				margin-top: 48px;
+				img {
+					margin: auto;
+					display: block;
+					max-width: 600px;
+					transform: translateX(48px);
+				}
+			}
+		}
+	}
+	@media only screen and (max-width: $mobile) {
+		.how-it-works {
+			.left {
+				max-width: 340px;
+				.declaration {
+					&:nth-child(1) {
+						font-size: 18px;
+					}
+					&:nth-child(2) {
+						font-size: 28px;
+					}
+				}
+			}
+			.right img {
+				width: 90%;
+				transform: none;
+				max-width: 425px;
 			}
 		}
 	}
