--- a/src/views/Home/AboutUs/index.scss
+++ b/src/views/Home/AboutUs/index.scss
@@ -1,20 +1,23 @@
 @import "../../../assets/style/regular";
 @import "./AlternativeDataV2/index";
+@import "HowItWorks/index";
 
 @mixin who-are-we {
 	.who-are-we {
 		margin: auto;
-		display: flex;
 		padding: 0 105px;
 		max-width: 1440px;
 		box-sizing: border-box;
-		.left {
-			flex-grow: 1;
+		.top {
+			text-align: center;
+			margin-bottom: 80px;
 			p {
 				margin: 0;
+				display: inline-block;
 				font-family: "Rubik", sans-serif;
 				&:nth-child(1) {
 					color: #A7A9C0;
+					display: block;
 					font-size: 24px;
 					font-weight: 500;
 					margin-bottom: 16px;
@@ -27,14 +30,14 @@
 				}
 			}
 		}
-		.right {
+		.bottom {
 			$size: 48px;
-			$margin: 30px;
 			width: 100%;
-			max-width: 470px;
-			box-sizing: border-box;
-			padding-left: $size + $margin;
+			display: flex;
 			.each-point {
+				position: relative;
+				width: calc(100% / 3);
+				padding: $size + 24px 15px 0 15px;
 				p {
 					margin: 0;
 					color: #303037;
@@ -44,17 +47,6 @@
 						line-height: 160%;
 						font-weight: bold;
 						font-family: "Rubik", sans-serif;
-						&:before {
-							top: 50%;
-							content: "";
-							width: $size;
-							height: $size;
-							position: absolute;
-							border-radius: 50%;
-							left: -$size - $margin;
-							background-color: #E0E0E0;
-							transform: translateY(-50%);
-						}
 					}
 					&:last-child {
 						font-size: 18px;
@@ -63,61 +55,76 @@
 						font-family: "SF Compact Text Regular", sans-serif;
 					}
 				}
-				&:not(:last-child) {
-					margin-bottom: 45px;
+				&:before {
+					content: "";
+					width: $size;
+					height: $size;
+					top: $size / 2;
+					position: absolute;
+					border-radius: 50%;
+					background-color: #E0E0E0;
+					transform: translateY(-50%);
+				}
+				&:first-child {
+					padding-left: 0;
+				}
+				&:last-child {
+					padding-right: 0;
 				}
 			}
 		}
 	}
 	@media only screen and (max-width: $tablet) {
 		.who-are-we {
-			flex-direction: column;
-			.left {
-				margin-bottom: 64px;
+			padding: 0 16px;
+			.top {
+				max-width: 560px;
+				margin: 0 auto 80px auto;
 				p {
-					text-align: center;
+					&:first-child {
+						font-size: 18px;
+					}
+					&:not(:first-child) {
+						font-size: 28px;
+					}
 				}
 			}
-			.right {
-				max-width: 550px;
+			.bottom {
+				$size: 48px;
+				margin: auto;
+				max-width: 560px;
+				flex-direction: column;
+				.each-point {
+					width: unset;
+					max-width: 560px;
+					margin-bottom: 40px + 18px;
+					padding: 0 0 0 24px + $size !important;
+					p {
+						&:first-child {
+							font-size: 18px;
+						}
+					}
+					&::before {
+						left: 0;
+						top: 18px;
+						width: $size;
+						height: $size;
+					}
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
 			}
 		}
 	}
 	@media only screen and (max-width: $mobile) {
-		.who-are-we {
-			padding: 0 16px;
-			.left p {
-				text-align: center;
-				&:nth-child(1) {
-					font-size: 18px;
-				}
-				&:not(:first-child) {
-					font-size: 28px;
-				}
-			}
-			.right {
+		.who-are-we .bottom .each-point {
+			padding-left: 64px !important;
+			&::before {
 				$size: 40px;
-				$margin: 24px;
-				margin-top: 70px;
-				padding-left: $size + $margin;
-				.each-point {
-					p {
-						&:first-child {
-							font-size: 18px;
-							&::before {
-								width: $size;
-								height: $size;
-								left: -$size - $margin;
-							}
-						}
-						&:last-child {
-							margin-top: 24px;
-						}
-					}
-					&:last-child {
-						margin-bottom: 38px;
-					}
-				}
+				top: 14px;
+				width: $size;
+				height: $size;
 			}
 		}
 	}
@@ -277,8 +284,8 @@
 	}
 }
 
-@mixin how-it-works {
-	.how-it-works {
+@mixin machine-learning {
+	.machine-learning {
 		margin: auto;
 		display: flex;
 		max-width: 1220px;
@@ -322,7 +329,7 @@
 		}
 	}
 	@media only screen and (max-width: $desktop-sm) {
-		.how-it-works {
+		.machine-learning {
 			flex-direction: column;
 			.left {
 				margin: auto;
@@ -342,8 +349,13 @@
 			}
 		}
 	}
+	@media only screen and (max-width: $tablet) {
+		.machine-learning .right img {
+			transform: none;
+		}
+	}
 	@media only screen and (max-width: $mobile) {
-		.how-it-works {
+		.machine-learning {
 			.left {
 				max-width: 340px;
 				.declaration {
@@ -373,6 +385,7 @@
 		@include what-we-do;
 		@include alternative-data;
 		@include how-it-works;
+		@include machine-learning;
 	}
 	@media only screen and (max-width: $mobile) {
 		.about-us-container {
