--- a/src/views/Home/Footer/index.scss
+++ b/src/views/Home/Footer/index.scss
@@ -80,14 +80,15 @@
 					margin: 80px 0 40px 0;
 					justify-content: center;
 					p {
+						margin: 0 8px;
 						display: block;
 						font-size: 16px;
 						font-family: "SF Compact Text Regular", sans-serif;
 						&:first-child {
-							margin-right: 8px;
+							margin-left: 0;
 						}
 						&:last-child {
-							margin-left: 8px;
+							margin-right: 0;
 						}
 					}
 				}
