--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -307,6 +307,9 @@
 						text-align: center;
 						&:nth-child(1) {
 							font-size: 18px;
+							max-width: 196px;
+							margin-left: auto;
+							margin-right: auto;
 						}
 						&:nth-child(2) {
 							font-size: 28px;
@@ -318,6 +321,7 @@
 					.button-container {
 						align-self: center;
 						img {
+							top: 6px;
 							left: unset;
 							right: -174px;
 						}
