--- a/src/views/Home/AboutUs/AlternativeDataV2/index.scss
+++ b/src/views/Home/AboutUs/AlternativeDataV2/index.scss
@@ -101,7 +101,7 @@
 							flex-grow: 1;
 							display: flex;
 							flex-direction: column;
-							justify-content: space-between;
+							justify-content: flex-end;
 							.service-subtile {
 								margin: 0;
 								color: #A7A9C0;
@@ -123,8 +123,8 @@
 			.empty-service-card {
 				width: 100%;
 				max-width: 390px;
-				box-shadow: none;
 				margin: 20px 16px;
+				box-shadow: none !important;
 			}
 		}
 	}
