--- a/src/views/Home/Header/index.scss
+++ b/src/views/Home/Header/index.scss
@@ -257,6 +257,7 @@
 		@media only screen and (min-width: $desktop-sm + 1px) {
 			.header-content-main .header-illustration {
 				top: 0;
+				right: 5vw;
 			}
 		}
 		@media only screen and (max-width: $desktop-sm) {
